deleting user, refactored logging
